Se agrega validacion de fecha en el registo y datepicker para saleccionar la fecha, asi como las opciones para los distintos tipos de documentos de identificacion.

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_en.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_en.properties
@@ -2437,3 +2437,10 @@ activate.account.error=Hubo un error al intentar activar su cuenta, por favor in
 activate.account.title=Activar Cuenta
 activate.account.success=Su cuenta ha sido activada satisfactoriamente.
 
+register.id.types.CC=Cédula de Ciudadanía
+register.id.types.CE=Cédula de Extranjero
+register.id.types.NIT=Número de Identificación Tributaria
+register.id.types.NITE=NITE
+register.id.types.NUIP=NUIP
+register.id.types.PA=Pasaporte
+register.id.types.TI=TI
