--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -2442,3 +2442,13 @@ login.not.a.robot.exception=Por favor, valide que no es un robot
 activate.account.error=Hubo un error al intentar activar su cuenta, por favor intentlo nuevamente más tarde.
 activate.account.title=Activar Cuenta
 activate.account.success=Su cuenta ha sido activada satisfactoriamente.
+
+
+register.id.types.CC=Cédula de Ciudadanía
+register.id.types.CE=Cédula de Extranjero
+register.id.types.NIT=Número de Identificación Tributaria
+register.id.types.NITE=NITE
+register.id.types.NUIP=NUIP
+register.id.types.PA=Pasaporte
+register.id.types.TI=TI
+									
