Se corrige bug en correo de recuperar contraseña, se agrega validacion de usuario registrado en base a documenttype y documentnumber

--- a/hybris/hybris/bin/custom/sdh/sdhcore/resources/localization/sdhcore-locales_en.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhcore/resources/localization/sdhcore-locales_en.properties
@@ -72,6 +72,7 @@ type.Gender.MALE.name=Male
 type.Gender.FEMALE.name=Female
 
 type.Customer.documentNumber.name=Document Number
+type.Customer.documentType.name=Document Type
 type.Customer.middleName.name=Middle Name
 type.Customer.secondLastName.name=Second Last Name
 type.Customer.documentExpeditionDate.name=Document Expedition Name
