--- a/hybris/hybris/bin/custom/sdh/sdhcore/resources/localization/sdhcore-locales_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhcore/resources/localization/sdhcore-locales_es.properties
@@ -72,6 +72,7 @@ type.Gender.MALE.name=Masculino
 type.Gender.FEMALE.name=Femenino
 
 type.Customer.documentNumber.name=Número de Documento
+type.Customer.documentType.name=Tipo de Documento
 type.Customer.middleName.name=Segundo Nombre
 type.Customer.secondLastName.name=Segundo Apellido
 type.Customer.documentExpeditionDate.name=Fecha de Expedición del Documento
