--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_en.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_en.properties
@@ -1783,6 +1783,7 @@ register.passwordRequirements=*Tú contraseña deberá contar con al menos una l
 register.activateInbox=¿Deseas activar tu Buzón Tributario?
 register.personalDataAuthorization=Autorizo uso de la anterior información para fines institucionales
 register.userNotFound=Usuario no encontrado
+register.userAlreadyRegistered=Usario ya existente, favor de recuperar contraseña
 
 taxpayers.title=Contribuyentes
 taxpayers.description=Bienvenido a la Oficina Virtual de la Secretaria Distrital de Hacienda
