--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -14,7 +14,7 @@ serviceFinder.acc.label=Buscador de puntos de servicio
 guest.checkout.login=¿Es nuevo en el Estado de Rosebud?
 guest.checkout.continue=Continuar como invitado.
 guest.checkout.continue.mobile=Continuar como invitado. O
-login.title=Iniciar sesión - Ciudadano registrado
+login.title=Iniciar sesión
 register.new.customer=Crear una cuenta de ciudadano
 register.description=Para realizar una solicitud de servicio rápida, acceder fácilmente a solicitudes de servicio anteriores y poder guardar la configuración, regístrese más abajo.
 
@@ -1787,6 +1787,7 @@ register.activateInbox=¿Deseas activar tu Buzón Tributario?
 register.personalDataAuthorization=Autorizo uso de la anterior información para fines institucionales
 register.confirmation=Confirmación de envío de correo.<br />Se ha creado correctamente tú usuario. Hemos enviado a tú correo un mensaje donde debés de confirmar tu cuenta.<br/>Bienvenido (a).
 register.userNotFound=Usuario no encontrado
+register.userAlreadyRegistered=Usario ya existente, favor de recuperar contraseña
 
 taxpayers.title=Contribuyentes
 taxpayers.description=Bienvenido a la Oficina Virtual de la Secretaria Distrital de Hacienda
