Ajustes Menu Mi Buzón, Ajuste menu Mi RIT, Estilos

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -272,7 +272,16 @@ serviceFinder.acc.title=Localizar un punto de servicio
 bill.page.billSortForm.label=Filtrar por estado de factura
 signInRegister.acc.title=Iniciar sesión o registrarse
 signOut.acc.title=Cerrar sesión
-myAccount.acc.title=Mi cuenta
+
+
+
+#->INI dev-eduardo Mi RIT 08/01/2019 ------------------------------------
+#myAccount.acc.title=Mi cuenta
+myAccount.acc.title=Mi RIT
+#->FIN dev-eduardo Mi RIT 08/01/2019 ------------------------------------
+
+
+
 closeMenu.acc.title=Cerrar este menú
 checkout.multi.paymentMethod.savedAddress=Direcciones guardadas
 save.cart.failed.exception.message=No es posible guardar el carro
