Adecuaciones para mostrar informacion del web service validacontribuyent en la pagina de mi rit.

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_en.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_en.properties
@@ -2445,3 +2445,25 @@ register.id.types.NITE=NITE
 register.id.types.NUIP=NUIP
 register.id.types.PA=Pasaporte
 register.id.types.TI=TI
+
+rit.tratamiento.t=
+rit.tratamiento.t0001=Señor
+rit.tratamiento.t0002=Señora
+rit.tratamiento.t0003=Señores
+rit.tratamiento.t0004=Señor/a
+
+rit.sexo.s=
+rit.sexo.s0001=Femenino
+rit.sexo.s0002=Masculino
+
+rit.pais.p=
+rit.pais.pCO=Colombia
+rit.pais.pMX=México
+rit.pais.pCL=Chile
+rit.pais.pPE=Perú
+
+rit.claseIC.c=
+rit.claseIC.cPNAT=Persona Natural
+rit.claseIC.cPJUR=Persona Júridica
+
+mirit.error.getInfo=Lo sentimos, hubo un error al obtener su información, favor de intentarlo mas tarde.
