Se corrigen observaciones de las pruebas realizadas por contraloria (textos, header, roles)

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -355,7 +355,7 @@ account.confirmation.address.added=Dirección creada correctamente
 account.confirmation.address.removed=Dirección eliminada correctamente
 account.confirmation.address.updated=Dirección actualizada correctamente
 account.confirmation.default.address.changed=Se actualizó la dirección predeterminada.
-account.confirmation.forgotten.password.link.sent=Le hemos enviado instrucciones para resetear la contraseña de su dirección de correo electrónico. Comuníquese con atención al cliente si necesita ayuda adicional.
+account.confirmation.forgotten.password.link.sent=Te hemos enviado instrucciones para actualizar la contraseña de tu dirección de correo electrónico. Comunicate con atención al cliente si necesitas ayuda adicional.
 account.confirmation.password.updated=Bien. Ahora puede iniciar sesión con la contraseña nueva.
 account.confirmation.payment.details.removed=Se eliminaron los detalles de pago.
 account.confirmation.profile.updated=Se actualizó el perfil.
@@ -840,7 +840,7 @@ file.size.kilobytes={0} KB
 file.size.megabytes={0} MB
 file.size.gigabytes={0} GB
 
-forgottenPwd.description=Indique la dirección de correo electrónico de la cuenta. Recibirá instrucciones sobre cómo restablecer la contraseña en esa dirección.
+forgottenPwd.description=Indica la dirección de correo electrónico de la cuenta. Recibiras intrucciones sobre comó restablecer la contraseña en esta dirección.
 forgottenPwd.email=Dirección de correo electrónico
 forgottenPwd.submit=Enviar correo electrónico
 forgottenPwd.title=Restaurar contraseña
@@ -910,13 +910,13 @@ j_password=Contraseña
 j_username=Inicio de sesión
 
 login.description=¿Ya tiene cuenta? Inicie sesión para recuperar las parametrizaciones de la cuenta.
-login.email=Dirección de correo electrónico
+login.email=Ingresa usuario
 login.error.account.not.found.subtitle=Si olvidó su contraseña, use el enlace Contraseña olvidada.
 login.error.incorrect.password.subtitle=Si olvidó su contraseña, use el enlace Contraseña olvidada.
 login.error.incorrect.password.title=Dirección de correo electrónico o contraseña incorrectos.
-login.link.forgottenPwd=¿Olvidó su contraseña?
+login.link.forgottenPwd=Recupera contraseña
 login.login=Iniciar sesión
-login.password=Contraseña
+login.password=Ingresa contraseña
 login.required=Obligatorio
 login.optional=(opcional)
 login.required.message=Los campos marcados con * son obligatorios
@@ -1103,7 +1103,7 @@ register.title.invalid=Seleccione un tratamiento
 register.terms.not.accepted = Por favor acepte nuestros términos y condiciones para registrarse.
 
 registration.confirmation.message.subtitle=Verifique su correo electrónico para controlar la dirección de correo electrónico.
-registration.confirmation.message.title=Gracias por registrarse.
+registration.confirmation.message.title=Gracias por registrarte.
 registration.error.account.exists.subtitle=Si olvidó su contraseña, use el enlace Contraseña olvidada.
 registration.error.account.exists.title=Ya existe una cuenta para esta dirección de correo.
 
@@ -1774,9 +1774,9 @@ text.consent.button.more=Más
 text.cookie.notification=Utilizamos cookies para asegurarnos de proporcionarle la mejor experiencia en nuestro sitio web. Si continúa, estará aceptando nuestra declaración de políticas.
 text.cookie.notification.accept=Ã
 
-login.link.getPassword=Obtén tu contraseña aquí
+login.link.getPassword=Obtén tu contraseña,<a href="{0}"> aquí</a>
 
-register.description=Hola, vamos a crear tú ID de usuario de la SDH para su Oficina Virtual.<br/>Úsalo para iniciar sesión y realizar operaciones tributarias de forma rápida y sencilla.<br/>Para habilitar tú cuenta por favor comienza ingresando los siguientes datos
+register.description=Hola, vamos a crear tu ID de usuario de la SDH para tu Oficina Virtual.<br>Úsalo para iniciar sesión y realizar operaciones tributarias de forma rápida y sencilla.<br>Para habilitar tu cuenta por favor comienza ingresando los siguientes datos.
 register.documentType=Tipo de Documento
 register.documentNumber=Número de Documento
 register.expeditioDate=Fecha de expedición documento de identificación:
@@ -1784,17 +1784,17 @@ register.search=Buscar
 register.cancel=Cancelar
 register.dearUser=Estimado Usuario
 register.descriptionStartSection=Actualmente no tienes cuenta de usuario para poder ingresar al sistema, por lo que requieres realizar el proceso de  autoregistro son los siguientes pasos.
-register.steps=1.- Realizaremos una serie de preguntas con el fin de poder validar tu identidad<br/>2.- Asignación de usuario y contraseña<br/>3.- Deberás de aceptar o no, notificaciones por buzón tributario<br/>4.- Deberás aceptar o no que te sea enviado información relevante a impuestos
+register.steps=1.- Realizaremos una serie de preguntas con el fin de poder validar tu identidad<br/>2.- Asignación de usuario y contraseña<br/>3.- Deberás de aceptar o no notificaciones por buzón tributario<br/>4.- Deberás aceptar o no que te sea enviada información relevante a impuestos
 register.continue=Continuar
 register.questions.title=Preguntas de Reto
 register.send=Enviar
 register.confirmEmail=Confirmar correo electrónico
-register.personalData.title=Para generar tú Usuario y Contraseña
-register.emailUser=*Tú correo electrónico será tu usuario
-register.passwordRequirements=*Tú contraseña deberá contar con al menos una letra mayúscula un número y una longitud de 8 y máximo 16 caracteres
+register.personalData.title=Para generar tu Usuario y Contraseña
+register.emailUser=*Tu correo electrónico será tu usuario
+register.passwordRequirements=*Tu contraseña deberá contar con al menos una letra mayúscula un número y una longitud de 8 y máximo 16 caracteres
 register.activateInbox=¿Deseas activar tu Buzón Tributario?
 register.personalDataAuthorization=Autorizo uso de la anterior información para fines institucionales
-register.confirmation=Confirmación de envío de correo.<br />Se ha creado correctamente tú usuario. Hemos enviado a tú correo un mensaje donde debés de confirmar tu cuenta.<br/>Bienvenido (a).
+register.confirmation=Confirmación de envío de correo.<br />Se ha creado correctamente tu usuario. Hemos enviado a tu correo un mensaje donde debes de confirmar tu cuenta.<br/>Bienvenido (a).
 register.userNotFound=Usuario no encontrado
 register.userAlreadyRegistered=Usario ya existente, favor de recuperar contraseña
 
@@ -2454,13 +2454,14 @@ activate.account.title=Activar Cuenta
 activate.account.success=Su cuenta ha sido activada satisfactoriamente.
 
 
-register.id.types.CC=Cédula de Ciudadanía
-register.id.types.CE=Cédula de Extranjero
-register.id.types.NIT=Número de Identificación Tributaria
-register.id.types.NITE=NITE
-register.id.types.NUIP=NUIP
-register.id.types.PA=Pasaporte
-register.id.types.TI=TI
+register.id.types.CC=CC Cédula de Ciudadanía
+register.id.types.CE=CE Cédula de Extranjería
+register.id.types.NIT=NIT Número de Identificación Tributaria
+register.id.types.NITE=NITE NIT Extranjero
+register.id.types.NUIP=NUIP Número Único de Identificación Personal
+register.id.types.PA=PA Pasaporte
+register.id.types.TI=TI Tarjeta de Identidad
+register.id.types.TIE=TIE Tarjeta de Identidad de Extranjero
 							
 							
 rit.tratamiento.t=
@@ -2484,3 +2485,6 @@ rit.claseIC.cPNAT=Persona Natural
 rit.claseIC.cPJUR=Persona Júridica
 
 mirit.error.getInfo=Lo sentimos, hubo un error al obtener su información, favor de intentarlo mas tarde.
+
+header.num.doc=Número de documento:
+header.tipo.doc=Tipo de documento:
