Cambios de texto, el login, etc.

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -169,7 +169,7 @@ profile.email.invalid=Indique una dirección de correo electrónico válida - ej
 register.email.invalid=Indique una dirección de correo electrónico
 register.confirmEmail.invalid=Por favor confirme el correo
 validation.confirmEmail.equals=Correo y confirmación de correo no coinciden
-password.strength.minchartext=Indique una contraseña que tenga como mínimo %d caracteres
+password.strength.minchartext=Indica una contraseña que tenga como mínimo %d caracteres y máximo 16, ésta deberá contener una letra mayúscula, una minúscula y un número.
 text.megamenu=Abrir menú
 search.title=Buscar
 search.icon=Buscar
@@ -196,7 +196,7 @@ checkout.error.paymentethod.formentry.sop.missing.card_expirationYear=Seleccione
 checkout.error.paymentethod.formentry.sop.missing.card_issueNumber=Indique un número de emisión
 checkout.error.paymentethod.formentry.sop.missing.card_startMonth=Seleccione un mes de inicio
 checkout.error.paymentethod.formentry.sop.missing.card_startYear=Seleccione un año de inicio
-login.error.account.not.found.title=Dirección de correo electrónico o contraseña incorrectos.
+login.error.account.not.found.title=Contraseña no válida, después de 3 intentos se bloqueará por 15 minutos
 register.pwd.invalid=Indique una contraseña válida
 text.homepage.label=Bienvenido al Estado de Rosebud. ¿Qué desea buscar?
 text.signinregisterpage.label=Iniciar sesión/Registrarse
@@ -840,10 +840,11 @@ file.size.kilobytes={0} KB
 file.size.megabytes={0} MB
 file.size.gigabytes={0} GB
 
-forgottenPwd.description=Indica la dirección de correo electrónico de la cuenta. Recibiras intrucciones sobre comó restablecer la contraseña en esta dirección.
+forgottenPwd.description=Para reajustar tu contraseña, envía tu dirección de correo electrónico. <br> Si podemos encontrarlo en la base de datos, te enviaremos un email con instrucciones para poder acceder de nuevo.
 forgottenPwd.email=Dirección de correo electrónico
 forgottenPwd.submit=Enviar correo electrónico
-forgottenPwd.title=Restaurar contraseña
+forgottenPwd.title=Recuperar contraseña
+forgottenPwd.send=ENVIAR
 
 form.field.required=Obligatorio
 form.global.error=Corrija los siguientes errores
@@ -1783,7 +1784,7 @@ register.expeditioDate=Fecha de expedición documento de identificación:
 register.search=Buscar
 register.cancel=Cancelar
 register.dearUser=Estimado Usuario
-register.descriptionStartSection=Actualmente no tienes cuenta de usuario para poder ingresar al sistema, por lo que requieres realizar el proceso de  autoregistro son los siguientes pasos.
+register.descriptionStartSection=Actualmente no tienes cuenta de usuario para poder ingresar al sistema, por lo que requieres realizar el proceso de  autoregistro con los siguientes pasos.
 register.steps=1.- Realizaremos una serie de preguntas con el fin de poder validar tu identidad<br/>2.- Asignación de usuario y contraseña<br/>3.- Deberás de aceptar o no notificaciones por buzón tributario<br/>4.- Deberás aceptar o no que te sea enviada información relevante a impuestos
 register.continue=Continuar
 register.questions.title=Preguntas de Reto
@@ -2448,6 +2449,8 @@ sobretasa.gasolina.detail.representaitonType=Tipo de representación
 
 login.not.a.robot=No soy un robot
 login.not.a.robot.exception=Por favor, valide que no es un robot
+login.not.a.validEmail.exception=Por favor, introduce un email válido
+login.user.disabled.exception= Usuario bloqueado, intente de nuevo en 15 minutos
 
 activate.account.error=Hubo un error al intentar activar su cuenta, por favor intentlo nuevamente más tarde.
 activate.account.title=Activar Cuenta
@@ -2488,3 +2491,9 @@ mirit.error.getInfo=Lo sentimos, hubo un error al obtener su información, favor
 
 header.num.doc=Número de documento:
 header.tipo.doc=Tipo de documento:
+
+register.pwd.invalid.size=La constraseña debe tener una longitud mínima de 8 caracteres y máxima de 16
+register.pwd.invalid.number=La contraseña debe contener al menos un número
+register.pwd.invalid.uppercase=La contraseña debe contener al menos una letra mayúscula
+register.pwd.invalid.lowercase=La contraseña debe contener al menos una letra minúscula
+
