--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -169,7 +169,7 @@ profile.email.invalid=Indique una dirección de correo electrónico válida - ej
 register.email.invalid=Indique una dirección de correo electrónico
 register.confirmEmail.invalid=Por favor confirme el correo
 validation.confirmEmail.equals=Correo y confirmación de correo no coinciden
-password.strength.minchartext=Indica una contraseña que tenga como mínimo %d caracteres y máximo 16, ésta deberá contener una letra mayúscula, una minúscula y un número.
+password.strength.minchartext=Tu contraseña debe tener una letra mayúscula, una minúscula, un número y una longitud entre %d y 16 caracteres
 text.megamenu=Abrir menú
 search.title=Buscar
 search.icon=Buscar
@@ -840,7 +840,7 @@ file.size.kilobytes={0} KB
 file.size.megabytes={0} MB
 file.size.gigabytes={0} GB
 
-forgottenPwd.description=Para reajustar tu contraseña, envía tu dirección de correo electrónico. <br> Si podemos encontrarlo en la base de datos, te enviaremos un email con instrucciones para poder acceder de nuevo.
+forgottenPwd.description=Para reajustar tu contraseña, envía tu dirección de correo electrónico. Si podemos encontrarlo en la base de datos, te enviaremos un email con instrucciones para poder acceder de nuevo.
 forgottenPwd.email=Dirección de correo electrónico
 forgottenPwd.submit=Enviar correo electrónico
 forgottenPwd.title=Recuperar contraseña
@@ -1784,18 +1784,18 @@ register.expeditioDate=Fecha de expedición documento de identificación:
 register.search=Buscar
 register.cancel=Cancelar
 register.dearUser=Estimado Usuario
-register.descriptionStartSection=Actualmente no tienes cuenta de usuario para poder ingresar al sistema, por lo que requieres realizar el proceso de  autoregistro con los siguientes pasos.
-register.steps=1.- Realizaremos una serie de preguntas con el fin de poder validar tu identidad<br/>2.- Asignación de usuario y contraseña<br/>3.- Deberás de aceptar o no notificaciones por buzón tributario<br/>4.- Deberás aceptar o no que te sea enviada información relevante a impuestos
+register.descriptionStartSection=Actualmente no tienes cuenta de usuario para poder ingresar. Por favor realiza el proceso de autoregistro con los siguientes pasos:
+register.steps=1.- Realizaremos una serie de preguntas con el fin de poder validar tu identidad<br/>2.- Asignación de usuario y contraseña<br/>3.- Debes de aceptar o no notificaciones por buzón tributario<br/>4.- Debes aceptar o no que te sea enviada información relevante a impuestos
 register.continue=Continuar
 register.questions.title=Preguntas de Reto
 register.send=Enviar
 register.confirmEmail=Confirmar correo electrónico
 register.personalData.title=Para generar tu Usuario y Contraseña
 register.emailUser=*Tu correo electrónico será tu usuario
-register.passwordRequirements=*Tu contraseña deberá contar con al menos una letra mayúscula un número y una longitud de 8 y máximo 16 caracteres
+register.passwordRequirements=Tu contraseña debe tener una letra mayúscula, una minúscula, un número y una longitud entre 8 y 16 caracteres
 register.activateInbox=¿Deseas activar tu Buzón Tributario?
 register.personalDataAuthorization=Autorizo uso de la anterior información para fines institucionales
-register.confirmation=Confirmación de envío de correo.<br />Se ha creado correctamente tu usuario. Hemos enviado a tu correo un mensaje donde debes de confirmar tu cuenta.<br/>Bienvenido (a).
+register.confirmation=Confirmación de envío de correo.<br />Se ha creado correctamente tu usuario. Hemos enviado a tu correo un mensaje para que confirmes tu cuenta.<br/>Bienvenido (a).
 register.userNotFound=Usuario no encontrado
 register.userAlreadyRegistered=Usario ya existente, favor de recuperar contraseña
 
@@ -2448,9 +2448,9 @@ sobretasa.gasolina.detail.verificationDigit=Digitó de verificación
 sobretasa.gasolina.detail.representaitonType=Tipo de representación
 
 login.not.a.robot=No soy un robot
-login.not.a.robot.exception=Por favor, valide que no es un robot
+login.not.a.robot.exception=Por favor valida que no eres un robot
 login.not.a.validEmail.exception=Por favor, introduce un email válido
-login.user.disabled.exception= Usuario bloqueado, intente de nuevo en 15 minutos
+login.user.disabled.exception= Usuario bloqueado, intenta de nuevo en 15 minutos
 
 activate.account.error=Hubo un error al intentar activar su cuenta, por favor intentlo nuevamente más tarde.
 activate.account.title=Activar Cuenta
