Correcion en mensaje

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -1785,7 +1785,7 @@ register.search=Buscar
 register.cancel=Cancelar
 register.dearUser=Estimado Usuario
 register.descriptionStartSection=Actualmente no tienes cuenta de usuario para poder ingresar. Por favor realiza el proceso de autoregistro con los siguientes pasos:
-register.steps=1.- Realizaremos una serie de preguntas con el fin de poder validar tu identidad<br/>2.- Asignación de usuario y contraseña<br/>3.- Debes de aceptar o no notificaciones por buzón tributario<br/>4.- Debes aceptar o no que te sea enviada información relevante a impuestos
+register.steps=1.- Realizaremos una serie de preguntas con el fin de poder validar tu identidad<br/>2.- Asignación de usuario y contraseña<br/>3.- Debes aceptar o no notificaciones por buzón tributario<br/>4.- Debes aceptar o no que te sea enviada información relevante a impuestos
 register.continue=Continuar
 register.questions.title=Preguntas de Reto
 register.send=Enviar
