Se deshabilitan campos de impuestos y reprensentantes legales y se corrige texto de "mis impuestos"

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -1867,7 +1867,7 @@ mirit.contactData.acept=Aceptar
 mirit.contactData.addAddress=Agregar otra dirección
 
 
-mirit.taxesData.title=Mis impuesto
+mirit.taxesData.title=Mis impuestos
 mirit.ica=ICA
 mirit.taxesData.economicActivity=Actividad Económica
 mirit.taxesData.description=Descripcion
