--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -1862,7 +1862,7 @@ mirit.contactData.addressType=Tipo de Dirección
 mirit.contactData.department=Departamento
 mirit.contactData.county=Municipio
 mirit.contactData.postalCode=Código Postal
-mirit.contactData.selectRequieredFields=Seleccione los datos requeridos en la lista desplegable inferior. Digite en el recuardo el detalle
+mirit.contactData.selectRequieredFields=Seleccione los datos requeridos en la lista desplegable inferior. Digite en el recuadro el detalle
 mirit.contactData.acept=Aceptar
 mirit.contactData.addAddress=Agregar otra dirección
 
