Correciones de mirit y mirit juridica

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -1922,6 +1922,15 @@ mirit.constents.title=Autorizaciones
 mirit.constents.notifications=Autorizo el uso del buzón electrónico para recibir notificaciones
 mirit.constents.useOfInformation=Autorizo uso de la anterior información para fines institucionales
 
+mirit.pj.name=Nombre o razón social
+mirit.pj.personalData.title=Mis datos Básicos Persona Jurídica
+mirit.pj.formajuridica=Forma jurídica
+mirit.pj.licenseNumber=Número de matrícula mercantil
+mirit.pj.liqDate=Fecha de Liquidación
+mirit.pj.retainerType=Tipo de retenedor
+
+mirit.pj.claseIC=Clase IC*
+
 mirit.buttons.certificate=Cerficación RIT
 mirit.buttons.update=Actualizar RIT
 
