Cambios para mostrar en el rit impuestos de gasolina y publicidad exterior

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -2947,4 +2947,10 @@ publicidad.exterior.tubular.chip=CHIP
 publicidad.exterior.tubular.propertyreg=Matrícula Inmobiliaria
 publicidad.exterior.tubular.numberfaces=Número de caras exposición
 
+mirit.exterior.publicity.title=Impuesto de Publicidad Exterior Visual
+mirit.exterior.publicity.numRes=Número Resolución
+mirit.exterior.publicity.tipoValla=Tipo de valla
 
+mirit.gas.tax.title=Impuesto Sobretasa a la Gasolina Motor
+mirit.gas.tax.numDoc=Número de documento
+mirit.gas.tax.tipoDoc=Tipo de Documento
