Pantalla Publicidad Exterior Declaración +

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_en.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_en.properties
@@ -5719,3 +5719,34 @@ publicidad.exterior.tubular.visualorientation=Orientación Visual
 publicidad.exterior.tubular.chip=CHIP
 publicidad.exterior.tubular.propertyreg=Matrícula Inmobiliaria
 publicidad.exterior.tubular.numberfaces=Número de caras exposición
+
+
+#->INI dev-maria 15/01/2019 textos para Publicidad Exterior Declaracion
+delineacion.urbana.detail.basicData=Datos básicos
+declaracion.publicidad.titulo= External Advertising Declaration
+declaracion.publicidad.datgene= General Data
+declaracion.publicidad.anogravable= Taxable year
+declaracion.publicidad.numresol= Resolution Number
+declaracion.publicidad.fecresol= Resolution Date
+declaracion.publicidad.infovalla= Information about the Fence
+declaracion.publicidad.OrValla= Orientation of the Fence
+declaracion.publicidad.luginst= Installation place
+declaracion.publicidad.basegrav= Taxable Base
+declaracion.publicidad.opuso= Use options
+declaracion.publicidad.totpagar= Total to pay
+declaracion.publicidad.impcargo= Tax Charge
+declaracion.publicidad.valsan= Sanction Value
+declaracion.publicidad.valpaga= Pay Value
+declaracion.publicidad.intermora= Delay interest
+declaracion.publicidad.totalapagar= Total to pay
+declaracion.publicidad.button.calcular= To Calculate
+declaracion.publicidad.FirmaDeclarante= Signature Information of the Declarant
+declaracion.publicidad.tipoiden= Identification type
+declaracion.publicidad.numidenti= Identification Number
+declaracion.publicidad.nombreyrazon= Surname and Name or Bussines Name
+declaracion.publicidad.pago= Pay
+declaracion.publicidad.button.gendecl= Generate Declaration
+declaracion.publicidad.button.crenewdec= Create New Declaration
+declaracion.publicidad.button.presdec= Present Declaration
+declaracion.publicidad.button.pag= Pay
+#->FIN dev-maria 15/01/2019 textos para Publicidad Exterior Declaracion
