--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -2901,3 +2901,33 @@ publicidad.exterior.tubular.propertyreg=Matrícula Inmobiliaria
 publicidad.exterior.tubular.numberfaces=Número de caras exposición
 
 
+#->INI dev-maria 15/01/2019 textos para Publicidad Exterior Declaracion
+declaracion.publicidad.titulo= Declaración de Publicidad Exterior
+declaracion.publicidad.datgene= Datos Generales
+declaracion.publicidad.anogravable= Año Gravable
+declaracion.publicidad.numresol= Número de Resolución
+declaracion.publicidad.fecresol= Fecha de Resolución
+declaracion.publicidad.infovalla= Información de la Valla
+declaracion.publicidad.OrValla= Orientación de la Valla
+declaracion.publicidad.luginst= Lugar de Instalación
+declaracion.publicidad.basegrav= Base Gravable
+declaracion.publicidad.opuso= Opciones de Uso
+declaracion.publicidad.totpagar= Total a Pagar
+declaracion.publicidad.impcargo= Impuesto a Cargo
+declaracion.publicidad.valsan= Valor Sanción
+declaracion.publicidad.valpaga= Valor a Pagar
+declaracion.publicidad.intermora= Interés de Mora
+declaracion.publicidad.totalapagar= Total a Pagar
+declaracion.publicidad.button.calcular= Calcular
+declaracion.publicidad.FirmaDeclarante= Información Firma del Declarante
+declaracion.publicidad.tipoiden= Tipo de identificación
+declaracion.publicidad.numidenti= No. de Identificación
+declaracion.publicidad.nombreyrazon= Apellidos y Nombres o Razón Social
+declaracion.publicidad.pago= Pago
+declaracion.publicidad.button.gendecl= Generar Declaración
+declaracion.publicidad.button.crenewdec= Crear Nueva Declaración
+declaracion.publicidad.button.presdec= Presentar Declaración
+declaracion.publicidad.button.pag= Pagar
+#->FIN dev-maria 15/01/2019 textos para Publicidad Exterior Declaracion
+
+
