--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -2596,6 +2596,7 @@ login.not.a.robot=No soy un robot
 login.not.a.robot.exception=Por favor valida que no eres un robot
 login.not.a.validEmail.exception=Por favor, introduce un email válido
 login.user.disabled.exception= Usuario bloqueado, intenta de nuevo en 15 minutos
+login.user.not.exists=Correo no registrado, obtén tu contraseña
 
 activate.account.error=Hubo un error al intentar activar su cuenta, por favor intentlo nuevamente más tarde.
 activate.account.title=Activar Cuenta
@@ -2661,6 +2662,7 @@ rit.legal.entity.25=
 rit.legal.entity.26=
 rit.legal.entity.27=S. Acc. Simpl.
 
+rit.legal.org.=
 rit.legal.org.EP=Emp. Públicas
 rit.legal.org.GD=G.Cont. DIAN
 rit.legal.org.GS=G.Cont. SHD
