Se corrige detalle de campo de email en login y registro, checkboxex, telefono, direccion

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -1851,7 +1851,7 @@ mirit.generalData.birthPlace=Lugar de nacimiento
 mirit.contactData.title=Datos de Contacto
 mirit.contactData.notificationAddress=Dirección de notificación
 mirit.contactData.anotherContactAddress=Otra dirección de contacto
-mirit.contactData.landPhone=Teléfono fijo
+mirit.contactData.landPhone=Teléfono principal
 mirit.contactData.cellPhone=Teléfono Celular
 mirit.contactData.socialNetwork=Red Social
 mirit.contactData.extension=Extensión
