Temporal de Certificacion

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -2953,11 +2953,10 @@ mirit.exterior.publicity.title=Impuesto de Publicidad Exterior Visual
 mirit.exterior.publicity.numRes=Número Resolución
 mirit.exterior.publicity.tipoValla=Tipo de valla
 
-<<<<<<< HEAD
 mirit.gas.tax.title=Impuesto Sobretasa a la Gasolina Motor
 mirit.gas.tax.numDoc=Número de documento
 mirit.gas.tax.tipoDoc=Tipo de Documento
-=======
+
 #->INI dev-maria 15/01/2019 textos para Publicidad Exterior Declaracion
 declaracion.publicidad.titulo= Declaración de Publicidad Exterior
 declaracion.publicidad.datgene= Datos Generales
@@ -2988,4 +2987,7 @@ declaracion.publicidad.button.pag= Pagar
 #->FIN dev-maria 15/01/2019 textos para Publicidad Exterior Declaracion
 
 
->>>>>>> dev-eduardo
+#->INI dev-eduardo 20/01/2019 textos para Mi RIT Certificacion
+mirit.certificacion.titulo=Certificación Mi RIT
+#->FIN dev-eduardo 20/01/2019 textos para Mi RIT Certificacion
+
