cambios en la vista de publicidad detalle y declaración

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3264,11 +3264,11 @@ declaracion.publicidad.titulo= Declaración de Publicidad Exterior
 declaracion.publicidad.datgene= Datos Generales
 declaracion.publicidad.anogravable= Año Gravable
 declaracion.publicidad.numresol= Número de Resolución
-declaracion.publicidad.fecresol= Fecha de Resolución
+declaracion.publicidad.fenoti= Fecha de Notificación
 declaracion.publicidad.infovalla= Información de la Valla
 declaracion.publicidad.OrValla= Orientación de la Valla
 declaracion.publicidad.luginst= Lugar de Instalación
-declaracion.publicidad.basegrav= Base Gravable
+declaracion.publicidad.tamvalla= Tamaño de la Valla
 declaracion.publicidad.opuso= Opciones de Uso
 declaracion.publicidad.totpagar= Total a Pagar
 declaracion.publicidad.impcargo= Impuesto a Cargo
