Se corrije falta de "=" en mensaje

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -2600,7 +2600,7 @@ login.user.not.exists=Correo no registrado, obtén tu contraseña
 
 activate.account.error=Hubo un error al intentar activar su cuenta, por favor intentlo nuevamente más tarde.
 activate.account.title=Activar Cuenta
-activate.account.successTu cuenta ha sido activada satisfactoriamente.
+activate.account.success=Tu cuenta ha sido activada satisfactoriamente.
 
 
 register.id.types.CC=CC Cédula de Ciudadanía
