--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -1828,7 +1828,7 @@ taxpayers.formalities.verificacionPagos=Verificación de Pagos
 taxpayers.formalities.retiroBoletinMorosos=Retiro del boletín deudores morosos
 
 mirit.description=Si deseas actualizar la información registrada en cada sección, debes hacer clic en el botón ACTUALIZAR RIT para que el sistema efectúe los cambios correspondientes.
-mirit.personalData.title=Mis datos Básicos Persona Natural
+mirit.personalData.title=Mis datos básicos Persona Natural
 mirit.personalData.documentType=Tipo de Documento
 mirit.personalData.firstName=Primer Nombre
 mirit.personalData.firstLastName=Primer Apellido
@@ -1864,6 +1864,7 @@ mirit.contactData.county=Municipio
 mirit.contactData.postalCode=Código Postal
 mirit.contactData.selectRequieredFields=Para adicionar más datos a tu dirección, diligencia los siguientes campos.
 mirit.contactData.acept=Aceptar
+mirit.contactData.cancel=Cancelar
 mirit.contactData.addAddress=Agregar otra dirección
 
 
