Se valida la certificacion de nombre se actualiza generacion de json para actualizar redes sociales, telefono y extesion, queda pendietne direcciones se adecua comportameitno de asistente de direcciones se agregan etiquetas al asistente de direcciones

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -1867,6 +1867,13 @@ mirit.contactData.acept=Aceptar
 mirit.contactData.cancel=Cancelar
 mirit.contactData.addAddress=Agregar otra dirección
 
+mirit.addresshelper.tipo=Tipo
+mirit.addresshelper.numero=Número
+mirit.addresshelper.letra=Letra
+mirit.addresshelper.bis=BIS
+mirit.addresshelper.zona=Zona
+mirit.addresshelper.tipoComplemento=Tipo de Complemento
+mirit.addresshelper.complemento=Complemento
 
 mirit.taxesData.title=Mis impuestos
 mirit.ica=Impuesto de Industria y Comercio ICA
