Ajustes certificacion MI RIT

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -2991,3 +2991,24 @@ declaracion.publicidad.button.pag= Pagar
 mirit.certificacion.titulo=Certificación Mi RIT
 #->FIN dev-eduardo 20/01/2019 textos para Mi RIT Certificacion
 
+
+#->INI dev-eduardo 20/01/2019 textos para Mi RIT Certificacion
+mirit.certificacion.textImp=Tipo de certificación
+mirit.certificacion.opSeleccionar=Seleccionar
+mirit.certificacion.opImpuesto=Impuesto
+mirit.certificacion.opSujeto=Sujeto
+mirit.certificacion.btnCancelar=Cancelar
+mirit.certificacion.btnGenerar=Generar
+
+mirit.certificacion.tituloImpuesto=Selecciona las opciones de Impuesto: 
+
+mirit.certificacion.opPredial=Predial
+mirit.certificacion.opVehicular=Vehicular
+mirit.certificacion.opICA=ICA
+mirit.certificacion.opPublicidadExterior=Publicidad Exterior
+mirit.certificacion.opSobretasaGasolina=Sobretasa Gasolina
+mirit.certificacion.opDelineaciónUrbana=Delineación Urbana 
+#->FIN dev-eduardo 20/01/2019 textos para Mi RIT Certificacion
+
+
+
