Se agrega validacion al resetear el password para rechazar las contraseña anterior Se corrije cambio de contraseña en la pagina del rit

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3322,3 +3322,6 @@ mirit.certificacion.opPublicidadExterior=Publicidad Exterior
 mirit.certificacion.opSobretasaGasolina=Sobretasa Gasolina
 mirit.certificacion.opDelineaciónUrbana=Delineación Urbana 
 #->FIN dev-eduardo 20/01/2019 textos para Mi RIT Certificacion
+
+
+updatePwd.token.sameOldPassword=La nueva contraseña no puede ser igual a la anterior.
