Se modifica estructura de direcciones y comportamiento de asistente de direcciones

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -1865,8 +1865,9 @@ mirit.contactData.postalCode=Código Postal
 mirit.contactData.selectRequieredFields=Para adicionar más datos a tu dirección, diligencia los siguientes campos.
 mirit.contactData.acept=Aceptar
 mirit.contactData.cancel=Cancelar
-mirit.contactData.addAddress=Agregar otra dirección
-
+mirit.contactData.addAddress=Confirmar
+mirit.contactData.editarAddress=Editar Dirección
+mirit.contactData.addSocialNetwork= Agregar red social
 mirit.addresshelper.tipo=Tipo
 mirit.addresshelper.numero=Número
 mirit.addresshelper.letra=Letra
