Cambio de texto del boton agregar complemento

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -1863,7 +1863,7 @@ mirit.contactData.department=Departamento
 mirit.contactData.county=Municipio
 mirit.contactData.postalCode=Código Postal
 mirit.contactData.selectRequieredFields=Para adicionar más datos a tu dirección, diligencia los siguientes campos.
-mirit.contactData.acept=Aceptar
+mirit.contactData.acept=Agregar Complemento
 mirit.contactData.cancel=Cancelar
 mirit.contactData.addAddress=Confirmar
 mirit.contactData.editarAddress=Editar Dirección
