pantalla Presentar Declaracion y su funcionalidad para Sorbretasa a gasolina

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3418,6 +3418,13 @@ impuestos.sobreTasaGasolina.representantes.fechaDesde = Fecha desde
 impuestos.sobreTasaGasolina.representantes.fechaHasta = Fecha hasta
 impuestos.sobreTasaGasolina.representantes.fuenteDato = Fuente dato
 #->FIN dev-federico 17/01/2019 textos para Sobretasa Gasolina
+#->INI dev-federico 7/02/2019 textos para Presentar Declaración
+impuestos.presentarDeclaracion.impuesto = Impuesto*:
+impuestos.presentarDeclaracion.anioGravableConsultar = Año gravable*:
+impuestos.presentarDeclaracion.Periodo = Periodo*:
+impuestos.presentarDeclaracion.PresentarDeclaracion = Presentar Declaración
+#->FIN dev-federico 7/02/2019 textos para Presentar Declaración
+
 
 
 updatePwd.token.sameOldPassword=La nueva contraseña no puede ser igual a la anterior.
